tests/errors/duplicate-cells.futil
import "primitives/core.futil";
import "primitives/memories/comb.futil";

component main() -> () {
  cells {
    r = std_reg(32);
    r = std_reg(32);
  }
  wires { }
  control { }
}
